--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@swc/core": "^1.2.148",
     "@swc/jest": "^0.2.20",
     "@types/jest": "^27.4.1",
+    "@types/supertest": "^2.0.12",
     "jest": "^27.5.1",
     "nodemon": "^2.0.16",
     "ts-node": "^10.6.0",
@@ -24,6 +25,7 @@
     "sequelize": "^6.17.0",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
+    "supertest": "^6.2.3",
     "uuid": "^8.3.2"
   }
 }
