--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   },
+  "jest": {
+    "verbose": true
+  },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
     "tsc": "tsc",
